--- a/src/assets/scss/_app.scss
+++ b/src/assets/scss/_app.scss
@@ -11,63 +11,90 @@
 }
 
 body{
-    background-color:#eef2ff;
+    background-color: #1F2937;
 }
 
 p{
   font-size:1.25rem;
-  color:#111827;
-  text-align:center;
+  color:$text-white;
+  line-height: 1.5;
 }
 
 header{
   padding:0.938rem;
-  text-align:center;
-  color: #ffffff;
+  color: $text-white;
   background-color:#1F2937;
-  border-radius:$border-radius
+  border-radius:$border-radius;
+  display:grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-gap: 1.875rem;
+  @media(max-width:767px) {
+    grid-template-columns: 1fr;
+  }
 }
 
-input[type=text]{
-  border-radius:$border-radius;
+@media(max-width:767px) {
+  .action-icon{
+    justify-self: center;
+  } 
+}
+
+input[type=search]{
+  background-color:transparent;
   box-sizing:border-box;
-  width:50%;
-  border-color:$border-gray-100;
+  width:100%;
   padding:0.5rem;
-  margin:2.5rem auto;
   display:block;
+  color:$text-white;
+  font-size:1.25rem;
+  box-shadow: 0 1px 6px 0 rgba(32,33,36,.28);
+  border: 1px solid $border-gray-100;
+  border-radius:$border-radius;
+  height:3.75rem;
   &:focus{
-      border-color: #4338CA;
-      outline:none;
+      border: 1px solid $border-gray-100;
+      outline:none; 
   }
   &:hover{
-      border-color:#9CA3AF;
+      border:1px solid $border-gray-100;
+  }
+}
+
+.gitLink{
+  justify-self: end;
+  @media(max-width:767px) {
+    justify-self: center;
+  }
+ }
+
+ .gitIcon {
+  width: 3.75rem;
+  transition: all .3s ease-in-out;
+  &:hover{
+    transform: rotate(360deg) scale(1.2);
   }
 }
 
 .grid-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 30px;
+  grid-gap: 1.875rem;
+  margin-top:3.75rem;
+  @media(max-width:767px) {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .grid-item {
-  background-color:#E0E7FF;
-  border: 1px solid $border-gray-100;
-  border-radius:$border-radius;
-  box-shadow: 0 3px 3px rgba(0,0,0,0.2);
   img{
     width:100%;
   }
+  &:hover{
+    opacity:.75;
+  }
 }
 
-@media(max-width:767px) {
-  .grid-container {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-gap: 1.875rem;
-  }
- }
+
 
 
 
