fix: showing search result message

--- a/src/assets/scss/_app.scss
+++ b/src/assets/scss/_app.scss
@@ -20,6 +20,12 @@ p{
   line-height: 1.5;
 }
 
+h1{
+  padding-top:3.125rem;
+  text-align:center;
+  color: #64748B;
+}
+
 header{
   padding:0.938rem;
   color: $text-white;
