--- a/src/assets/scss/_app.scss
+++ b/src/assets/scss/_app.scss
@@ -112,6 +112,23 @@ button{
   border-radius: .375rem;
 }
 
+.loader{
+  width:3rem;
+  height:3rem;
+  margin: 0, 0.3rem;
+  animation: spin 1s linear infinite;
+  margin-left:auto;
+  margin-right:auto;
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+}
+
 
 
 
